--- a/css/fl-ticket.css
+++ b/css/fl-ticket.css
@@ -1,15 +1,35 @@
+/* Device Element */
+
 .fl-device-element {
-    background-color: #f6f6f6;
     border: 6px solid #ddd;
     border-radius: 8px;
     margin-bottom: 8px;
-    padding: 15px;
-}
-.fl-device-element:hover{
-   background-color:#ddd;
 }
 
+.fl-device-element-content{
+    transition: background-color 0.3s ease;
+    background-color: rgba(0,0,0,0.15);
+    padding: 14px 18px;
+    color: #fff;
+}
+.fl-device-element-content:hover{
+    background-color: rgba(0,0,0,0);
+}
+.fl-device-element-content h2{
+    margin-bottom: 15px;
+}
+.fl-device-element-content p{
+    color: rgba(256,256,256,0.7);
+    margin-bottom: 5px;
+}
+.fl-device-element-content:hover p{
+    color: rgba(256,256,256,1);
+}
+
+/* Ticket Element */
+
 .fl-ticket-element {
+    position: relative;
     background: #fff;
     border-left: 5px solid #dd7127;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
@@ -17,11 +37,17 @@
     margin: 0px 6px 14px 8px;
 }
 
-.message-box {
-    background-color: #FDFDEF;
-    border: 1px solid #EBE9C5;
-    border-radius: 4px ;
-    padding: 5px 10px;
+.fl-ticket-element {
+    position: relative;
+    background: #fff;
+    border-left: 5px solid #dd7127;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+    padding: 24px 28px;
+    margin: 0px 6px 14px 8px;
+}
+.fl-ticket-element h2 {
+    margin-top: -10px;
+    margin-bottom: 10px;
 }
 
 .fl-ticket-element input[type=submit] {
@@ -46,35 +72,38 @@
     cursor: pointer;
 }
 
-/* overlay styles */
+/* overlay style */
+
 .fl-overlay {
     position: fixed;
     top: 0;
     left: 0;
-    height: 100%;
     width: 100%;
+    height: 100%;
     background-color: rgba(0,0,0,0.5);
+    right: 0;
+    top: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
     z-index: 10;
 }
 
+/* Device Ticket Overlay */
+
 .device-ticket {
     width: 70%;
-    position: fixed;
-    top: 100px; 
-    margin-left: 8px;
-    margin-right: 8px;
+    position: relative;
+    margin: 150px auto; 
     padding: 30px 30px 30px;
     background-color: #fdfdfd;
     border: 7px solid #ccc;
     border-radius: 8px;
-    z-index: 11; /* 1px higher than the overlay layer */
+    z-index: 12; /* 1px higher than the overlay layer */
 }
 
 @media all and (min-width: 800px) {
     .device-ticket {
         width: 650px;
-        margin-left: auto;
-        margin-right: auto;
     }
 }
 
@@ -118,4 +147,13 @@
     -webkit-appearance:none;
     -moz-appearance:none;
     appearance:none;
+}
+
+/* Message */
+
+.message-box {
+    background-color: #efc;
+    border: 1px solid #eee;
+    border-radius: 4px ;
+    padding: 5px 10px;
 }
