--- a/css/fl-ticket.css
+++ b/css/fl-ticket.css
@@ -50,12 +50,13 @@
 .fl-ticket-element h2 {
     margin-top: -10px;
     margin-bottom: 10px;
+    color: #74a4a3;
 }
 
 .fl-ticket-element input[type=submit] {
-    border: 1px solid #58a3a2;
+    border: 1px solid #74a4a3;
     background: none;
-    color: #58a3a2;
+    color: #74a4a3;
     text-transform: none;
     padding: 11px 18px;
     font-weight: 600;
@@ -67,7 +68,7 @@
 }
 
 .fl-ticket-element input[type=submit]:hover {
-    background: #58a3a2;
+    background: #74a4a3;
     color: #fff;
     cursor: pointer;
 }
@@ -80,12 +81,36 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.5);
     right: 0;
     top: 0;
     overflow-x: hidden;
     overflow-y: auto;
     z-index: 10;
+}
+
+.device-ticket .close {
+    margin: -20px -14px;
+    text-align: right;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 1;
+    opacity: 0.3;
+}
+.device-ticket .close:hover {
+    cursor: pointer;
+    opacity: 0.5;
+}
+
+.fl-overlay-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    right: 0;
+    top: 0;
+    z-index: 11;
 }
 
 /* Device Ticket Overlay */
