--- a/css/fl-ticket.css
+++ b/css/fl-ticket.css
@@ -167,6 +167,26 @@
     -moz-appearance:none;
 }
 
+/* Blink */
+
+.blink{
+    -webkit-animation: blink 600ms infinite alternate;
+    -moz-animation: blink 600ms infinite alternate;
+    animation: blink 600ms infinite alternate;
+}
+@-webkit-keyframes blink {
+    from { opacity:0.3; }
+    to { opacity:1; }
+}
+@-moz-keyframes blink {
+    from { opacity:0.3; }
+    to { opacity:1; }
+}
+@keyframes blink {
+    from { opacity:0.3; }
+    to { opacity:1; }
+};
+
 /* Message */
 
 .message-box {
