ticket-list + "no ticket" display

--- a/css/fl-ticket-list.css
+++ b/css/fl-ticket-list.css
@@ -7,7 +7,7 @@
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
     padding: 20px 24px;
     margin: 20px 10px;
-    transition: height 0.2s ease;
+    transition: all 0.2s ease;
     -webkit-transition: all 0.2s ease;
     -moz-transition: all 0.2s ease;
 }
