--- a/css/fl-ticket.css
+++ b/css/fl-ticket.css
@@ -41,15 +41,20 @@
     padding: 24px 28px;
     margin: 0px 6px 14px 8px;
 }
-
 .fl-ticket-element h2 {
-    margin-top: -4px;
-    margin-bottom: 8px;
-    color: #74a4a3;
+    margin-top: 6px;
+    margin-bottom: 6px;
+    font-size: 28px;
     font-weight: bold;
+    color: #74a4a3;
+}
+.fl-ticket-element p {
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 .fl-ticket-element input[type=submit] {
+    margin-top: 10px;
     border: 1px solid #74a4a3;
     background: none;
     color: #74a4a3;
