--- a/css/fl-ticket-list.css
+++ b/css/fl-ticket-list.css
@@ -17,6 +17,7 @@
     margin-bottom: 6px;
     font-size: 28px;
     font-weight: bold;
+    letter-spacing: 0.5px;
     color: #74a4a3;
 }
 .fl-ticket-element p {
@@ -33,6 +34,7 @@
     padding: 10px 16px;
     font-weight: bold;
     font-size: 14px;
+    letter-spacing: 0.5px;
     border-radius: 5px;
     transition: all 0.2s ease;
     -webkit-transition: all 0.2s ease;
@@ -68,6 +70,7 @@
     font-weight: bold;
     line-height: 1;
     opacity: 0.3;
+    text-decoration: none;
 }
 .device-ticket .close:hover {
     cursor: pointer;
@@ -115,6 +118,7 @@
     margin-top: 6px;
     margin-bottom: 14px;
     font-weight: bold;
+    letter-spacing: 0.5px;
 }
 
 .device-ticket input[type=submit] {
@@ -123,7 +127,8 @@
     color: #aaa;
     text-transform: none;
     padding: 6px 12px;
-    font-weight: 600;
+    font-weight: bold;
+    letter-spacing: 0.5px;
     border-radius: 4px;
     transition: all 0.2s ease;
     -webkit-transition: all 0.2s ease;
@@ -168,6 +173,7 @@
     background-color: #0066CC;
     color: #fff;
     padding: 6px 10px;
+    letter-spacing: 0.5px;
     cursor: pointer;
     margin: 0px;
 }
@@ -182,6 +188,7 @@
     background-color: #74a4a3;
     color: #fff;
     padding: 6px 10px;
+    letter-spacing: 0.5px;
     cursor: pointer;
     margin: 0px;
 }
