--- a/css/fl-ticket.css
+++ b/css/fl-ticket.css
@@ -22,6 +22,7 @@
     margin-bottom: 14px;
     color: rgba(256,256,256,0.9);
     font-weight: bold;
+    letter-spacing: 0.5px;
 }
 .fl-device-element-content p{
     color: rgba(256,256,256,0.7);
@@ -46,6 +47,7 @@
     margin-bottom: 6px;
     font-size: 28px;
     font-weight: bold;
+    letter-spacing: 0.5px;
     color: #74a4a3;
 }
 .fl-ticket-element p {
@@ -62,6 +64,7 @@
     padding: 10px 16px;
     font-weight: bold;
     font-size: 14px;
+    letter-spacing: 0.5px;
     border-radius: 5px;
     transition: all 0.2s ease;
     -webkit-transition: all 0.2s ease;
@@ -111,6 +114,7 @@
     font-weight: bold;
     line-height: 1;
     opacity: 0.3;
+    text-decoration: none;
 }
 .device-ticket .close:hover {
     cursor: pointer;
@@ -144,6 +148,7 @@
     margin-top: 6px;
     margin-bottom: 14px;
     font-weight: bold;
+    letter-spacing: 0.5px;
 }
 
 .device-ticket input[type=submit] {
@@ -154,6 +159,7 @@
     padding: 6px 12px;
     font-weight: bold;
     font-size: 12px;
+    letter-spacing: 0.5px;
     border-radius: 4px;
     transition: all 0.2s ease;
     -webkit-transition: all 0.2s ease;
