ticket handler/logic + add setting activation + add setting delay time + deactivate pretending tickets after delay + blinking ticket when pretending + auto reload ticket list

--- a/css/fl-ticket-list.css
+++ b/css/fl-ticket-list.css
@@ -193,6 +193,25 @@
     margin: 0px;
 }
 
+/* Blink */
+
+.blink{
+    animation: blink 600ms infinite alternate;
+    -webkit-animation: blink 600ms infinite alternate;
+    -moz-animation: blink 600ms infinite alternate;
+}
+@-webkit-keyframes blink {
+    from { opacity:0.3; }
+    to { opacity:1; }
+}
+@-moz-keyframes blink {
+    from { opacity:0.3; }
+    to { opacity:1; }
+}
+@keyframes blink {
+    from { opacity:0.3; }
+    to { opacity:1; }
+}
 
 /* Message */
 
