--- a/css/fl-ticket-list.css
+++ b/css/fl-ticket-list.css
@@ -48,6 +48,18 @@
     cursor: pointer;
 }
 
+.reload {
+    margin: 10px;
+    text-align: right;
+    font-size: 20px;
+    line-height: 1;
+    opacity: 1;  
+}
+.reload:hover {
+    cursor: pointer;
+    opacity: 0.5;
+}
+
 /* overlay style */
 
 .fl-overlay {
