--- a/css/fl-ticket-list.css
+++ b/css/fl-ticket-list.css
@@ -4,10 +4,9 @@
     font-family: Helvetica, Arial, Sans-Serif;
     position: relative;
     background: #fff;
-    border-left: 5px solid #dd7127;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
     padding: 20px 24px;
-    margin: 20px 10px;
+    margin: 10px;
     transition: all 0.2s ease;
     -webkit-transition: all 0.2s ease;
     -moz-transition: all 0.2s ease;
@@ -52,6 +51,29 @@
     opacity: 0.6;
 } 
 
+/* Instruction Element */
+
+.get-instruction {
+    background-color: #ddd;
+}
+
+.get-instruction p{
+    font-weight: 600;
+    letter-spacing: 0.5px;
+}
+
+.instruction-element {
+    width: 395px;
+    float: left;
+}
+
+.instruction-listing {
+    float: none;
+    padding-bottom: 2px;
+}
+
+
+/* Reload icon */
 
 .reload {
     margin: 10px;
@@ -77,7 +99,7 @@
     top: 0;
     overflow-x: hidden;
     overflow-y: auto;
-    z-index: 10010;
+    z-index: 10012;
 }
 
 .device-ticket .close {
@@ -93,6 +115,9 @@
     cursor: pointer;
     opacity: 0.5;
 }
+input[type="checkbox"] {
+    margin: 10px 6px 18px 10px;
+}
 
 .fl-overlay-background {
     position: fixed;
@@ -101,6 +126,16 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.5);
+    right: 0;
+    top: 0;
+    z-index: 10010;
+}
+.fl-overlay-layer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     right: 0;
     top: 0;
     z-index: 10011;
@@ -116,7 +151,7 @@
     background-color: #fdfdfd;
     border: 7px solid #ccc;
     border-radius: 8px;
-    z-index: 10012; /* 1px higher than the overlay layer */
+    z-index: 10013; /* 1px higher than the overlay layer */
 }
 
 @media all and (min-width: 800px) {
