--- a/css/fl-ticket-list.css
+++ b/css/fl-ticket-list.css
@@ -51,6 +51,11 @@
     opacity: 0.6;
 } 
 
+.ticket-list {
+    margin-top: 40px;
+    margin-bottom: 34px;
+}
+
 /* Instruction Element */
 
 .get-instruction {
@@ -67,9 +72,8 @@
     float: left;
 }
 
-.instruction-listing {
-    float: none;
-    padding-bottom: 2px;
+.instruction-list {
+    margin-bottom: 24px;
 }
 
 
