--- a/css/fl-ticket-list.css
+++ b/css/fl-ticket-list.css
@@ -52,7 +52,6 @@
 } 
 
 .ticket-list {
-    margin-top: 40px;
     margin-bottom: 34px;
 }
 
@@ -68,7 +67,9 @@
 }
 
 .instruction-element {
-    width: 395px;
+    width: 94%;
+    max-width: 400px;
+    margin: 0px 6px 14px 8px;
     float: left;
 }
 
@@ -89,6 +90,11 @@
 .reload a:hover {
     cursor: pointer;
     opacity: 0.5;
+}
+
+p {
+    margin-top: 8px;
+    margin-bottom: 8px;
 }
 
 /* overlay style */
