--- a/css/fl-ticket-list.css
+++ b/css/fl-ticket-list.css
@@ -287,3 +287,63 @@ input[type="checkbox"] {
 .message-box p{
     margin: 4px;
 }
+
+/* User Fullsceen */
+
+.fl-fullscreen-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #eee;
+    right: 0;
+    top: 0;
+    z-index: 100010;
+}
+.fl-fullscreen-layer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    right: 0;
+    top: 0;
+    z-index: 100011;
+}
+
+.fl-fullscreen-layer .fl-ticket-element {
+    height: 180px;
+}
+
+.fl-fullscreen-layer .close {
+    position: fixed;
+    right: 14px;
+    top: 10px;
+    z-index: 10015;
+}
+
+.fl-fullscreen-layer .ticket-list {
+    float: left;
+    width: 600px;
+    margin-bottom: 0px;
+}
+
+.fl-fullscreen-layer .time-ticket-list {
+    float: left;
+    width: 600px;    
+    margin-bottom: 0px;
+}
+
+ .fl-fullscreen-layer .tickets-box {
+    width: 1200px;
+    position: relative;
+    margin: 40px auto; 
+    z-index: 10013; /* 1px higher than the overlay layer */
+}
+
+@media all and (max-width: 1200px) {
+    .fl-fullscreen-layer .tickets-box {
+        width: 600px;
+    }
+}
