update and fix ticket deactivation handler + don't delete activation time when assigned as time ticket + delete ticket when 2xdelay time
user ticket view
+ show time tickets first

--- a/css/fl-ticket-list.css
+++ b/css/fl-ticket-list.css
@@ -6,7 +6,7 @@
     background: #fff;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
     padding: 20px 24px;
-    margin: 10px;
+    margin: 18px 10px;
     transition: all 0.2s ease;
     -webkit-transition: all 0.2s ease;
     -moz-transition: all 0.2s ease;
@@ -85,7 +85,7 @@
     text-align: right;
     font-size: 20px;
     line-height: 1;
-    opacity: 1;  
+    opacity: 1;
 }
 .reload a:hover {
     cursor: pointer;
@@ -321,6 +321,7 @@ input[type="checkbox"] {
     right: 14px;
     top: 10px;
     z-index: 10015;
+    text-decoration: none;
 }
 
 .fl-fullscreen-layer .ticket-list {
