-- Release Beta 4 -- all function implemented and working
get ticket list
+ fix update bug
+ rearange list
+ add update and add checks to avoid duplicates

--- a/css/fl-ticket.css
+++ b/css/fl-ticket.css
@@ -4,6 +4,7 @@
     border: 6px solid #ddd;
     border-radius: 8px;
     margin-bottom: 8px;
+    cursor: pointer;
 }
 
 .fl-device-element-content{
@@ -150,6 +151,11 @@
 .device-ticket .close:hover {
     cursor: pointer;
     opacity: 0.5;
+}
+
+.device-message {
+    margin-bottom: 40px; 
+    opacity: 0.6;
 }
 
 .device-ticket {
