--- a/css/fl-ticket-list.css
+++ b/css/fl-ticket-list.css
@@ -209,7 +209,7 @@ input[type="checkbox"] {
 
 .device-ticket select {
     font-size: 14px;
-    height: 29px;
+    height: 32px;
     line-height: 1;
     border-radius:4px;
     border: 1px solid #eee;
@@ -279,16 +279,40 @@ input[type="checkbox"] {
 
 .message-box p{
     margin: 4px;
-    font-size: 14px;
+}
+.message-box {
+    background: #fefefe;
+    border-left: 10px solid #fc0;
+    -webkit-box-shadow: 0 1px 1px 0 rgba(0,0,0,.2);
+    box-shadow: 0 4px 4px 0 rgba(0,0,0,.1);
+    margin: 20px 6px;
+    padding: 10px 18px;
+    font-size: 16px;
+    font-weight: 600;
 }
 
-.message-box {
-    background: #fff;
-    border-left: 4px solid #74a4a3;
-    -webkit-box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,.1);
-    margin: 6px;
-    padding: 10px 12px;
+.success{
+    border-left: 10px solid #9c0;
+}
+
+.error{
+    border-left: 10px solid #b21;
+}
+
+/* busy indicator */
+
+.busy {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-left: -16px;
+    margin-top: -16px;
+    text-align:center;
+    z-index:100;
+    overflow: auto;
+    background: url(loader.svg) no-repeat;
+    width: 80px;
+    height: 80px;
 }
 
 /* User Fullsceen */
