ticket-edit + highlight select fields + fix content loader bug

--- a/css/fl-ticket-list.css
+++ b/css/fl-ticket-list.css
@@ -221,6 +221,7 @@ input[type="checkbox"] {
     appearance:none;
     -webkit-appearance:none;
     -moz-appearance:none;
+    margin: 14px 0;
 }
 
 /* Draft Ticket List */
