--- a/css/fl-ticket-list.css
+++ b/css/fl-ticket-list.css
@@ -227,19 +227,58 @@ input[type="checkbox"] {
 /* Draft Ticket List */
 
 .draft-box {
-    border: 1px solid #0066CC;
-    border-radius: 4px;
+    border-radius: 6px;
     margin-bottom: 14px;
+    transition: all 0.4s ease;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+}
+.draft-box:hover {
+    background-color: #f3f3f3;
 }
 
 .draft-toggle {
-    background-color: #0066CC;
-    color: #fff;
-    padding: 6px 10px;
-    letter-spacing: 0.5px;
     cursor: pointer;
-    margin: 0px;
 }
+
+.draft-title {
+    letter-spacing: 0.5px;
+    text-align: center;
+    font-weight: 600;
+    font-size: 18px;
+    transition: all 0.4s ease;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    color: #999;
+    padding-top: 6px;
+}
+.draft-title:hover {
+    letter-spacing: 0.6px;
+}
+
+.arrow-down:hover {
+    border-left: 36px solid transparent;
+    border-right: 36px solid transparent;
+}
+
+.arrow-down {
+    width: 0; 
+    height: 0; 
+    border-left: 32px solid transparent;
+    border-right: 32px solid transparent;
+    border-top: 16px solid #ddd;
+    margin: auto;
+    transition: all 0.4s ease;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    padding-bottom: 6px;
+}
+
+.draft-content {
+    background-color: #f7f7f7;
+}
+
+/* Time-Ticket List */
 
 .time-ticket-box {
     border: 1px solid #74a4a3;
