--- a/css/fl-ticket.css
+++ b/css/fl-ticket.css
@@ -259,7 +259,7 @@
 .message-box {
     background: #fefefe;
     border-left: 10px solid #fc0;
-    -webkit-box-shadow: 0 1px 1px 0 rgba(0,0,0,.2);
+    -webkit-box-shadow: 0 4px 4px 0 rgba(0,0,0,.1);
     box-shadow: 0 4px 4px 0 rgba(0,0,0,.1);
     margin: 20px 6px;
     padding: 10px 18px;
@@ -273,6 +273,68 @@
 
 .error{
     border-left: 10px solid #b21;
+}
+
+/* Help Box */
+
+.help-container {
+    position: absolute;
+    right: 0;
+}
+
+.help-button {
+    cursor: pointer;
+    background-color: #74a4a3;
+    color: #fff;
+    margin: 6px;
+    border-radius: 4px;
+    padding: 6px 10px;
+}
+
+.help-box {
+    text-align: left;
+    position: absolute;
+    right: 0;
+    width: 650px;
+    border: 4px solid #eee;
+    border-radius: 6px;
+    margin-bottom: 14px;
+    background-color: #eee;
+    z-index: 100;
+    -webkit-box-shadow: 0 4px 4px 0 rgba(0,0,0,.2);
+    box-shadow: 0 4px 4px 0 rgba(0,0,0,.2);
+}
+
+@media all and (max-width: 800px) {
+    .help-box {
+        width: 400px;
+    }
+}
+
+.help-headder {
+    background-color: #74a4a3;
+    border-radius: 4px;
+    color: #fff;
+    padding: 6px 10px;
+    letter-spacing: 0.5px;
+    cursor: pointer;
+    margin: 4px;
+    font-weight: 600;
+}
+
+.help-content {
+    text-align: left;
+    margin: 6px;
+}
+.help-content p {
+    padding-left: 6px;
+    margin-bottom: 2px;
+}
+.help-content ol {
+    margin-left: -6px;
+}
+.help-content ul {
+    margin-left: -14px;
 }
 
 /* busy indicator */
