--- a/css/fl-ticket-list.css
+++ b/css/fl-ticket-list.css
@@ -1,3 +1,7 @@
+h2 {
+    margin-top: 14px;
+}
+
 /* Ticket Element */
 
 .fl-ticket-element {
@@ -100,8 +104,6 @@
         display: none;
     }
 }
-
-
 
 p {
     margin-top: 8px;
@@ -290,18 +292,40 @@ p {
 
 /* Time-Ticket List */
 
-.time-ticket-box {
-    border: 1px solid #74a4a3;
-    border-radius: 4px;
-    margin-bottom: 14px;
+.device-list-box {
+    border-radius: 2px;
+    margin-bottom: 10px;
+    -webkit-box-shadow: 0 0px 4px rgba(0,0,0,.2);
+    box-shadow: 0px 0px 4px rgba(0,0,0,.2);
 }
 
-.time-ticket-toggle {
-    background-color: #74a4a3;
+.device-toggle {
+    background-color: #aaa;
+    font-size: 16px;
     color: #fff;
-    padding: 6px 10px;
+    padding: 6px 14px;
     letter-spacing: 0.5px;
     cursor: pointer;
+    margin: 0px;
+}
+.device-close {
+    background-color: #ccc;
+    color: #fff;
+    padding: 4px 12px;
+    letter-spacing: 0.5px;
+    cursor: pointer;
+    margin: 0 -20px -20px -20px;
+}
+.device-listing {
+    padding: 20px;
+}
+.device-listing h2{
+    margin-top: 2px;
+}
+.device-toggle p {
+    margin: 0px;
+}
+.device-close p {
     margin: 0px;
 }
 
@@ -388,6 +412,59 @@ p {
     top: 0;
     z-index: 100011;
 }
+.menu {
+    background-color: #74a4a3;
+    border: none;
+    list-style-type: none;
+    margin: 0 6px 0 0;
+    padding: 2px;
+    overflow: hidden;
+    border-radius: 8px;
+    display: inline-block;
+}
+
+.menu input[type=submit] {
+    border: none;
+    border-radius: 4px;
+    background: none;
+    color: #fff;
+    text-transform: none;
+    padding: 4px 10px;
+    margin: 2px;
+    font-weight: bold;
+    font-size: 14px;
+    letter-spacing: 0.5px;
+    transition: all 0.2s ease;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    display: inline-block;
+    box-shadow: none;
+    text-shadow: none;
+}
+.menu input[type=submit]:hover {
+    background: #fff;
+    color: #74a4a3;
+    cursor: pointer;
+}
+.active {
+    background: #fff;
+    color: #74a4a3;
+}
+
+.menu-dropdown {
+    display: none;
+    position: absolute;
+    background-color: #74a4a3;
+    list-style-type: none;
+    margin: 2px 0 0 -2px;
+    padding: 4px;
+    border-radius: 6px;
+    z-index: 50;
+}
+
+.menu:hover > .menu-dropdown {
+    display: block;
+}
 
 .device-selector {
     background-color: #74a4a3;
@@ -410,6 +487,7 @@ p {
     margin: -1px 0;
     padding: 5px 5px 2px 5px;
     border-radius: 4px;
+    z-index: 50;
 }
 
 .device-selector ul li{
