--- a/css/fl-ticket-list.css
+++ b/css/fl-ticket-list.css
@@ -412,6 +412,75 @@ p {
     top: 0;
     z-index: 100011;
 }
+
+/* reload layer */
+
+.reload-layer-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 240px;
+    background-color: #74a4a3;
+    right: 0;
+    top: 0;
+    z-index: 100010;
+}
+.reload-layer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 240px;
+    right: 0;
+    top: 0;
+    z-index: 100011;
+}
+
+.reload-layer-box {
+    position: relative;
+    margin: 0px auto;
+    text-align: center;
+    z-index: 100012;
+    color: #fff;
+    width: 300px;
+    height: 140px;
+}
+
+.reload-layer-box p {
+    font-size: 15px;
+    line-height: 1;
+    font-weight: 300;
+    margin: 0;
+}
+
+.reload-layer-left {
+    float: left;
+    width: 140px;
+    height: 140px;
+}
+.reload-layer-left:hover {
+    opacity: 0.7;
+    transition: all 0.2s ease;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    cursor: pointer;
+}
+
+.reload-layer-left p {
+    margin-top: -6px;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.reload-layer-center {
+    float: left;
+    width: 20px;
+    height: 140px;
+}
+
+/* Menu */
+
 .menu {
     background-color: #74a4a3;
     border: none;
