--- a/css/fl-ticket-list.css
+++ b/css/fl-ticket-list.css
@@ -314,13 +314,10 @@ p {
     padding: 6px 14px;
     letter-spacing: 0.5px;
     cursor: pointer;
-    margin: 0 -20px -20px -20px;
+    margin: 0;
 }
 .device-listing {
-    padding: 20px;
-}
-.device-listing h2{
-    margin-top: 2px;
+    padding: 0 20px;
 }
 .device-toggle p {
     margin: 0px;
